# serializer version: 1
# name: test_image_platform[image.erics273_avatar-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.erics273_avatar',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Avatar',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxImage.AVATAR: 'avatar'>,
    'unique_id': '2533274913657542_avatar',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_platform[image.erics273_avatar-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '520',
      'entity_picture': '/api/image_proxy/image.erics273_avatar?token=520',
      'friendly_name': 'erics273 Avatar',
    }),
    'context': <ANY>,
    'entity_id': 'image.erics273_avatar',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_image_platform[image.erics273_gamerpic-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.erics273_gamerpic',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Gamerpic',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxImage.GAMERPIC: 'gamerpic'>,
    'unique_id': '2533274913657542_gamerpic',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_platform[image.erics273_gamerpic-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '520',
      'entity_picture': '/api/image_proxy/image.erics273_gamerpic?token=520',
      'friendly_name': 'erics273 Gamerpic',
    }),
    'context': <ANY>,
    'entity_id': 'image.erics273_gamerpic',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_image_platform[image.erics273_now_playing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.erics273_now_playing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Now playing',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxImage.NOW_PLAYING: 'now_playing'>,
    'unique_id': '2533274913657542_now_playing',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_platform[image.erics273_now_playing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '520',
      'entity_picture': '/api/image_proxy/image.erics273_now_playing?token=520',
      'friendly_name': 'erics273 Now playing',
    }),
    'context': <ANY>,
    'entity_id': 'image.erics273_now_playing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_image_platform[image.gsr_ae_avatar-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.gsr_ae_avatar',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Avatar',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxImage.AVATAR: 'avatar'>,
    'unique_id': '271958441785640_avatar',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_platform[image.gsr_ae_avatar-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '520',
      'entity_picture': '/api/image_proxy/image.gsr_ae_avatar?token=520',
      'friendly_name': 'GSR Ae Avatar',
    }),
    'context': <ANY>,
    'entity_id': 'image.gsr_ae_avatar',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_image_platform[image.gsr_ae_gamerpic-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.gsr_ae_gamerpic',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Gamerpic',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxImage.GAMERPIC: 'gamerpic'>,
    'unique_id': '271958441785640_gamerpic',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_platform[image.gsr_ae_gamerpic-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '520',
      'entity_picture': '/api/image_proxy/image.gsr_ae_gamerpic?token=520',
      'friendly_name': 'GSR Ae Gamerpic',
    }),
    'context': <ANY>,
    'entity_id': 'image.gsr_ae_gamerpic',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_image_platform[image.gsr_ae_now_playing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.gsr_ae_now_playing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Now playing',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxImage.NOW_PLAYING: 'now_playing'>,
    'unique_id': '271958441785640_now_playing',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_platform[image.gsr_ae_now_playing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '520',
      'entity_picture': '/api/image_proxy/image.gsr_ae_now_playing?token=520',
      'friendly_name': 'GSR Ae Now playing',
    }),
    'context': <ANY>,
    'entity_id': 'image.gsr_ae_now_playing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_image_platform[image.ikken_hissatsuu_avatar-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.ikken_hissatsuu_avatar',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Avatar',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxImage.AVATAR: 'avatar'>,
    'unique_id': '2533274838782903_avatar',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_platform[image.ikken_hissatsuu_avatar-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '520',
      'entity_picture': '/api/image_proxy/image.ikken_hissatsuu_avatar?token=520',
      'friendly_name': 'Ikken Hissatsuu Avatar',
    }),
    'context': <ANY>,
    'entity_id': 'image.ikken_hissatsuu_avatar',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_image_platform[image.ikken_hissatsuu_gamerpic-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.ikken_hissatsuu_gamerpic',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Gamerpic',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxImage.GAMERPIC: 'gamerpic'>,
    'unique_id': '2533274838782903_gamerpic',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_platform[image.ikken_hissatsuu_gamerpic-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '520',
      'entity_picture': '/api/image_proxy/image.ikken_hissatsuu_gamerpic?token=520',
      'friendly_name': 'Ikken Hissatsuu Gamerpic',
    }),
    'context': <ANY>,
    'entity_id': 'image.ikken_hissatsuu_gamerpic',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
# name: test_image_platform[image.ikken_hissatsuu_now_playing-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.ikken_hissatsuu_now_playing',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Now playing',
    'platform': 'xbox',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': <XboxImage.NOW_PLAYING: 'now_playing'>,
    'unique_id': '2533274838782903_now_playing',
    'unit_of_measurement': None,
  })
# ---
# name: test_image_platform[image.ikken_hissatsuu_now_playing-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '520',
      'entity_picture': '/api/image_proxy/image.ikken_hissatsuu_now_playing?token=520',
      'friendly_name': 'Ikken Hissatsuu Now playing',
    }),
    'context': <ANY>,
    'entity_id': 'image.ikken_hissatsuu_now_playing',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2013-12-13T12:13:12+00:00',
  })
# ---
